contrast error fix..  hopfully

--- a/lesson3/styles/large.css
+++ b/lesson3/styles/large.css
@@ -5,13 +5,13 @@
  }
   
   header h1 {
-      padding: 40px;
+      padding: 35px;
       font-size: 32px;
       text-shadow: 2px 3px 0px black;
   }
 
   main {
-    margin-left: 150px;
-    margin-right: 150px;
+    margin-left: 200px;
+    margin-right: 200px;
   }
 }
