--- a/lesson3/styles/small.css
+++ b/lesson3/styles/small.css
@@ -37,9 +37,12 @@ header h1 {
    border-width: thin;
 }
 
+h2 {
+   color: var(--darkgreen);
+}
+
 h2, h3 {
    font-family: var(--robo);
-   color: var(--darkgreen);
    margin-top: 30px;
 }
 
